--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,14 @@
   </head>
 
   <body>
+    
+   <%= render partial: 'shared/navbar' %>
 
-    <%= render partial: 'shared/navbar' %>
+    <div class="container">
+      <% if notice %><div class="alert alert-info"><%= notice %></div><% end %>
+      <% if alert %><div class="alert alert-warning"><%= alert %></div> <% end %>
 
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
