--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(item) do |f| %>
-  <% if item.errors.any? %>
+<%= form_for(painting) do |f| %>
+  <% if painting.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(item.errors.count, "error") %> prohibited this item from being saved:</h2>
+      <h2><%= pluralize(painting.errors.count, "error") %> prohibited this painting from being saved:</h2>
 
       <ul>
-      <% item.errors.full_messages.each do |message| %>
+      <% painting.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -14,11 +14,6 @@
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :covershot %>
-    <%= f.file_field :covershot %>
   </div>
 
   <div class="field">
