--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -20,6 +20,12 @@
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :cover %>
+    <%= f.file_field :cover %>
+
+
+  </div>
 
   <div class="actions">
     <%= f.submit %>
