--- a/app/views/paintings/show.html.erb
+++ b/app/views/paintings/show.html.erb
@@ -10,5 +10,7 @@
   <%= @painting.description %>
 </p>
 
+<%= image_tag "paintings/#{@painting.id}/cover/anorak.jpg" %>
+
 <%= link_to 'Edit', edit_painting_path(@painting) %> |
 <%= link_to 'Back', paintings_path %>
