--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,13 +15,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "Home", paintings_path %></li>
-        <li><%= link_to "Blog", posts_path %> </li>
+        <li><%= link_to "Blog", blogs_path %> </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Order", new_charge_path %></li>
             <li><a href="#">Messages</a></li>
-            <li><a href="#">Clearance</a></li>
+            <li><%= link_to "New Artists", artists_path %> </li>
             <li role="separator" class="divider"></li>
             <li><%= link_to "About Us", about_about_us_path %></li>
             <li role="separator" class="divider"></li>
